# telegram_image_background_remover

./: .gitignore  README.md  bg_rem.py  bot.py  config.py  file_transfer.py  image_to_pdf.py  main.py  multi_images_to_pdf.py  non_commands.py  pyproject.toml
